--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body {
-    margin: 0px;
     background-color: #fff;
     overflow: hidden;
+    color: black;
+    font-family: Arial, sans-serif;
+    margin-left: 20px;
 }
